--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
             <% if current_user %>
                 <%= link_to "Public Ribbits", ribbits_path %>
                 <%= link_to "Log Out", sessions_destroy_path %>
+                <%= link_to "Public Profiles", users_path %>
+                <%= link_to "My Profile", current_user %>
+                <%= link_to "Buddies' Ribbits", buddies_path %>
             <% else %>
                 <%= form_tag sessions_create_path do %>
                     <%= text_field_tag :username, nil, placeholder: "username" %>
